Initialize the count variable used in SQLNumResultCols to 0

If the call to SQLNumResultCols fails for whatever reason then it will
not be correctly caught since the count might be higher than 0 since it is
uninitalized. This ensures that if it fails then it does not try to act as
if it succeeded.

Task-number: QTBUG-39137
Change-Id: Ifae8c1f7fac8416643f2317747f87295642a7935
Reviewed-by: Mark Brand <mabrand@mabrand.nl>

cregit: d153e4628e7643cf02b795f68f739c4bced15389 https://github.com/qt/qtbase/commit/d153e4628e7643cf02b795f68f739c4bced15389